[project]
name = "raenim"
version = "0.5.3"
description = "Imcommit's custom manim library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "addict>=2.4.0",
    "opencv-python>=4.13.0.90",
    "noise>=1.2.2",
]


[tool.uv.sources]
manim = { git = "https://github.com/CodingVillainKor/manim.git" }